#1933: added test for the console panel